--- a/init.sh.example
+++ b/init.sh.example
@@ -20,7 +20,7 @@ UPOPTS="-d --no-recreate --no-build --no-deps"
 
 case "$1" in
     start)
-        log_daemon_msg "Starting $PROJECT_NAME Compositon" "$PROJECT_NAME" || true
+        log_daemon_msg "Starting $PROJECT_NAME Composition" "$PROJECT_NAME" || true
         docker-compose $OPTS up $UPOPTS
         ;;
 
