--- a/init.sh.example
+++ b/init.sh.example
@@ -2,8 +2,8 @@
 
 ### BEGIN INIT INFO
 # Provides:	    %s
-# Required-Start:	$docker
-# Required-Stop:	$docker
+# Required-Start:	docker
+# Required-Stop:	docker
 # Default-Start:	2 3 4 5
 # Default-Stop:		0 1 6
 # Short-Description:	Docker Services
