--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
---index-url https://pypi.python.org/simple/
-
 setuptools
 uwsgi
 watchdog
 MySQL-python==1.2.5
-Django==1.8.7
+Django==1.8.9
 mezzanine==4.0.1
 django-modeltranslation
 django-meta
 psycopg2
+mezzanine-agenda
