--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ db:
 
 app:
   build: .
-  command: /bin/sh deploy/start_app.sh --runserver
+  command: /bin/sh deploy/start_app.sh
   ports:
     - "9000:9000"
   volumes:
