--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ db:
   volumes:
     - ./data/var/lib/mysql/:/var/lib/mysql
     - ./scripts/:/srv/scripts
+    - ./app/deploy/my.cnf:/etc/mysql/my.cnf
   environment:
     - MYSQL_ROOT_PASSWORD=hyRob0otlaz4
     - MYSQL_DATABASE=manifeste
