--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,52 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+### Filetype & folder ###
+#########################
+
+dist
+build
+*.unprefixed.css
+*.log
+*.map
+bower_components
+node_modules
+.sass-cache
+
+### SublimeText ###
+###################
+
+*.sublime-workspace
+# *.sublime-project
+
+### OSX ###
+###########
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+
+### Windows ###
+###############
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+
+sources
