--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,9 +51,9 @@ db:
 
 app:
   build: .
-  command: /bin/sh deploy/start_app.sh
+  command: /bin/sh deploy/start_app.sh --runserver
   ports:
-    - "9000:9000"
+    - "9010:9010"
   volumes:
     - ./app/:/srv/app
   volumes_from:
