--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ db:
 
 app:
   build: .
-  command: /bin/sh deploy/start_app.sh --runserver
+  command: /bin/sh deploy/start_app.sh
   ports:
     - "9010:9010"
   volumes:
