--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,2 @@
 -e git+https://github.com/yomguy/mezzanine-agenda.git#egg=mezzanine-agenda-0.2.0
-
-
-
+-e git+https://github.com/stephenmcd/mezzanine.git#egg=mezzanine-4.1-dev
