--- a/deploy/nginx-app.conf
+++ b/deploy/nginx-app.conf
@@ -2,7 +2,7 @@ server_tokens off;
 
 server {
        listen 80;
-       server_name nginx;
+       server_name messiaen.ircam.fr nginx;
        charset utf-8;
 
        access_log /var/log/nginx/app-access.log;
