--- a/conf/dev.yml
+++ b/conf/dev.yml
@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 #
-# Copyright (c) 2015 IRCAM
+# Copyright (c) 2015 Guillaume Pellerin <guillaume.pellerin@ircam.fr>
 
 # Manifeste is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -23,6 +23,5 @@ app:
   command: /bin/sh deploy/start_app.sh --runserver
   volumes:
     - ./app/:/srv/app
-    - ./lib/mezzanine-agenda/:/srv/lib/mezzanine-agenda  
   ports:
     - "9010:8000"
