--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,2 +1,3 @@
 -e git+https://github.com/yomguy/mezzanine-agenda.git#egg=mezzanine-agenda-0.2.0
 -e git+https://github.com/stephenmcd/mezzanine.git#egg=mezzanine-4.1-dev
+-e git+https://github.com/yomguy/django-eve.git#egg=django-eve-1.0
