add mezzanine-agenda as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/django-eve"]
 	path = lib/django-eve
 	url = git+ssh://git@git.forge.ircam.fr/django-eve.git
+[submodule "lib/mezzanine-agenda"]
+	path = lib/mezzanine-agenda
+	url = git+ssh://git@git.forge.ircam.fr/mezzanine-agenda.git
