--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ pgdb:
 
 app:
   build: .
-  command: /bin/sh deploy/start_app.sh
+  command: /bin/sh scripts/app.sh
   volumes:
     - ./app/:/srv/app
     - ./lib/mezzanine-agenda/:/srv/lib/mezzanine-agenda
@@ -68,7 +68,7 @@ nginx:
   ports:
     - "80:80"
   volumes:
-    - ./app/deploy/nginx-app.conf:/etc/nginx/conf.d/default.conf
+    - ./etc/nginx.conf:/etc/nginx/conf.d/default.conf
     - ./data/var/log/nginx/:/var/log/nginx
   volumes_from:
     - data
