--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,18 @@ data:
   image: debian:jessie
   volumes:
     - ./data/media/:/srv/media
-    - ./data/static/:/srv/static
     - ./data/backup/:/srv/backup
-    - ./scripts/:/srv/scripts
+    - /srv/static
+    - /srv/bower
   command: "true"
 
 db:
   image: mariadb
   volumes_from:
     - data
+  volumes:
+    - ./scripts/:/srv/scripts
+    - ./data/mysql/:/var/lib/mysql
   environment:
     - MYSQL_ROOT_PASSWORD=hyRob0otlaz4
     - MYSQL_DATABASE=ircam
@@ -50,7 +53,6 @@ app:
     - "8000"
   links:
     - db
-    - pgdb
   environment:
    - DEBUG=False
 
