--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ db:
     - ./data/mysql/:/var/lib/mysql
   environment:
     - MYSQL_ROOT_PASSWORD=hyRob0otlaz4
-    - MYSQL_DATABASE=ircam
+    - MYSQL_DATABASE=ircam-www
     - MYSQL_USER=ircam
     - MYSQL_PASSWORD=Onukifsid7
 
