make /var/lib/mysql a non local volume in dev mode (for OSX)

--- a/env/dev.yml
+++ b/env/dev.yml
@@ -23,6 +23,7 @@ app:
   command: /bin/sh scripts/app.sh --runserver
   volumes:
     - ./app/:/srv/app
+    - /var/lib/mysql
   ports:
     - "9020:8000"
   environment:
