--- a/package.json
+++ b/package.json
@@ -32,7 +32,16 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.1",
-    "gulp-sass": "^2.1.0",
+    "gulp-sass": {
+      "version": "2.3.1",
+      "from": "gulp-sass@>=2.3.1 <3.0.0",
+      "resolved": "https://registry.npmjs.org/gulp-sass/-/gulp-sass-2.3.1.tgz",
+      "dependencies": {
+        "node-sass": {
+          "version": "3.4.2"
+        }
+      }
+    },
     "gulp-uglify": "^1.4.2"
   }
 }
