--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,18 +28,28 @@ data:
     - /srv/bower
   command: "true"
 
+# db:
+#   image: mariadb
+#   volumes_from:
+#     - data
+#   volumes:
+#     - ./scripts/:/srv/scripts
+#     - ./data/mysql/:/var/lib/mysql
+#   environment:
+#     - MYSQL_ROOT_PASSWORD=hyRob0otlaz4
+#     - MYSQL_DATABASE=ircam-www
+#     - MYSQL_USER=ircam
+#     - MYSQL_PASSWORD=Onukifsid7
+
 db:
-  image: mariadb
+  image: postgres
   volumes_from:
     - data
   volumes:
     - ./scripts/:/srv/scripts
-    - ./data/mysql/:/var/lib/mysql
+    - ./data/postgresql/data/:/var/lib/postgresql/data
   environment:
-    - MYSQL_ROOT_PASSWORD=hyRob0otlaz4
-    - MYSQL_DATABASE=ircam-www
-    - MYSQL_USER=ircam
-    - MYSQL_PASSWORD=Onukifsid7
+    - POSTGRES_PASSWORD=hyRob0otlaz4
 
 app:
   build: .
