--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,6 @@
 -e git+https://github.com/yomguy/mezzanine-agenda.git#egg=mezzanine-agenda-0.2.2
 -e git+https://github.com/stephenmcd/mezzanine.git#egg=mezzanine-4.1-dev
+-e git+https://github.com/stephenmcd/grappelli-safe#egg=grappelli-safe-0.4.2
 #https://forge.ircam.fr/p/django-eve/source/download/dev/
 #
 #
