--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-bower-files": "^0.2.7",
     "gulp-browserify": "^0.5.1",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.0",
@@ -23,7 +24,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.2",
     "gulp-util": "^3.0.7",
-    "main-bower-files": "^2.11.1",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.1.5"
   },
