--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "font-awesome": "fontawesome#^4.6.3",
     "jquery": "^3.1.0",
-    "overflow.js": "*"
+    "overflow.js": "*",
+    "sticky-kit": "^1.1.2"
   }
 }
