--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "font-awesome": "fontawesome#^4.6.3",
     "jquery": "^3.1.0",
     "overflow.js": "*",
-    "sticky-kit": "^1.1.2"
+    "sticky-kit": "^1.1.2",
+    "jquery-throttle-debounce": "https://github.com/cowboy/jquery-throttle-debounce.git"
   }
 }
