WARNING: huge refactoring! add DepatmentPage and TeamPage, rename modules, add various data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ app:
   volumes:
     - ./app/:/srv/app
     - ./lib/mezzanine-agenda/:/srv/lib/mezzanine-agenda
-    # - ./lib/mezzanine/:/srv/lib/mezzanine
+    - ./lib/mezzanine/:/srv/lib/mezzanine
   volumes_from:
     - data
   expose:
