--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,11 @@
   ],
   "dependencies": {
     "font-awesome": "fontawesome#^4.6.3",
-    "jquery": "^3.1.0",
     "overflow.js": "*",
     "sticky-kit": "^1.1.2",
-    "jquery-throttle-debounce": "https://github.com/cowboy/jquery-throttle-debounce.git"
+    "jquery-throttle-debounce": "https://github.com/cowboy/jquery-throttle-debounce.git",
+    "lightslider": "^1.1.5",
+    "lightgallery": "^1.2.21",
+    "jquery": "https://github.com/components/jquery.git#2.2.4"
   }
 }
