--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery-throttle-debounce": "https://github.com/cowboy/jquery-throttle-debounce.git",
     "lightslider": "^1.1.5",
     "lightgallery": "^1.2.21",
-    "jquery": "https://github.com/components/jquery.git#2.2.4"
+    "jquery": "https://github.com/components/jquery.git#2.2.4",
+    "imagesloaded": "^4.1.1"
   }
 }
