--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "lightslider": "^1.1.5",
     "lightgallery": "^1.2.21",
     "jquery": "https://github.com/components/jquery.git#2.2.4",
-    "imagesloaded": "^4.1.1"
+    "imagesloaded": "^4.1.1",
+    "pushy": "^1.0.0"
   }
 }
