Add eve and presta dbs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ app:
   volumes:
     - ./app/:/srv/app
     - ./lib/mezzanine-agenda/:/srv/lib/mezzanine-agenda
+    - ./lib/django-eve/:/srv/lib/django-eve
     # - ./lib/mezzanine/:/srv/lib/mezzanine
     - ./lib/grappelli-safe/:/srv/lib/grappelli-safe
   volumes_from:
