Add lazyload on cards

--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,7 @@
     "pushy": "^1.0.0",
     "audiojs": "^1.0.1",
     "video.js": "^5.13.0",
-    "videojs-playlist": "^2.4.0"
+    "videojs-playlist": "^2.4.0",
+    "jquery_lazyload": "jquery.lazyload#^1.9.7"
   }
 }
