Update bower.json to fix bower warnings

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "IrcamWWW",
-  "description": "IrcamWWW",
+  "name": "ircamwww",
+  "description": "ircamwww",
   "main": "",
   "authors": [
     "Fabre Jérémy"
