Add custom mezzanine as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "data"]
 	path = data
 	url = git+ssh://git@git.forge.ircam.fr/ircam-www-data.git
+[submodule "lib/mezzanine"]
+	path = lib/mezzanine
+	url = https://github.com/yomguy/mezzanine.git
