--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/mezzanine"]
 	path = lib/mezzanine
 	url = https://github.com/yomguy/mezzanine.git
+[submodule "lib/django-prestashop"]
+        path = lib/mezzanine
+        url = https://github.com/yomguy/django-prestashop.git
