--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "audiojs": "^1.0.1",
     "video.js": "^5.12.5",
     "videojs-playlist": "^2.4.0",
-    "jquery_lazyload": "jquery.lazyload#^1.9.7"
+    "jquery_lazyload": "jquery.lazyload#^1.9.7",
+    "waypoints": "^4.0.1"
   }
 }
