--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ db:
   volumes:
     - ./scripts/:/srv/scripts
     - ./data/postgresql/data/:/var/lib/postgresql/data
+    - ./data/var/log/postgresql/:/var/log/postgresql
   environment:
     - POSTGRES_PASSWORD=hyRob0otlaz4
 
@@ -61,7 +62,7 @@ app:
 nginx:
   image: nginx
   ports:
-    - "8040:80"
+    - "8020:80"
   volumes:
     - ./etc/nginx.conf:/etc/nginx/conf.d/default.conf
     - ./data/var/log/nginx/:/var/log/nginx
