--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ db:
   volumes:
     - ./scripts/:/srv/scripts
     - ./data/postgresql/data/:/var/lib/postgresql/data
-    - ./data/var/log/postgresql/:/var/log/postgresql
+    # - ./data/var/log/postgresql/:/var/log/postgresql
   environment:
     - POSTGRES_PASSWORD=hyRob0otlaz4
 
