--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,15 @@ pyquery
 humanize
 Django==1.9.11
 mezzanine==4.2.2
-django-modeltranslation
-django-meta
-django-bower
-django-debug-toolbar
-django-extensions
-django-countries
-django-querysetsequence
-django-autocomplete-light
+django-modeltranslation==0.12
+django-meta==1.3.1
+django-bower==5.2.0
+django-debug-toolbar==1.6
+django-extensions==1.7.4
+django-countries==4.0
+django-querysetsequence==0.6.1
+django-autocomplete-light==3.2.1
+cartridge==0.12.0
+xlrd==1.0.0
 ipython
-cartridge
-xlrd
 gitpython
