--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,3 +3,4 @@
 -e git+https://github.com/yomguy/grappelli-safe.git@dynamic_stacked#egg=grappelli-safe-0.4.2
 -e git+https://github.com/yomguy/django-eve.git@dev#egg=django-eve-1.0
 -e git+https://github.com/yomguy/django-prestashop.git@dev#egg=django-prestashop-1.0
+-e git+https://github.com/yomguy/cartridge.git#egg=cartridge-0.12-dev
