--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,11 @@
 # Authors:
 # Guillaume Pellerin <guillaume.pellerin@ircam.fr>
 
-
-data:
+var:
   image: debian:jessie
   volumes:
-    - ./data/media/:/srv/media
-    - ./data/backup/:/srv/backup
+    - ./var/media:/srv/media
+    - ./var/backup:/srv/backup
     - /srv/static
     - /srv/bower
   command: "true"
@@ -31,11 +30,10 @@ data:
 db:
   image: postgres:9.5
   volumes_from:
-    - data
+    - var
   volumes:
-    - ./scripts/:/srv/scripts
-    - ./data/postgresql/data/:/var/lib/postgresql/data
-    # - ./data/var/log/postgresql/:/var/log/postgresql
+    - ./scripts:/srv/scripts
+    - ./var/lib/postgresql/data:/var/lib/postgresql/data
   environment:
     - POSTGRES_PASSWORD=hyRob0otlaz4
 
@@ -43,16 +41,16 @@ app:
   build: .
   command: /bin/bash scripts/app.sh
   volumes:
-    - ./app/:/srv/app
-    - ./data/var/log/uwsgi/:/var/log/uwsgi
-    - ./lib/grappelli-safe/:/srv/lib/grappelli-safe
-    - ./lib/mezzanine-agenda/:/srv/lib/mezzanine-agenda
-    - ./lib/django-eve/:/srv/lib/django-eve
-    - ./lib/django-prestashop/:/srv/lib/django-prestashop
+    - ./app:/srv/app
+    - ./var/log/uwsgi:/var/log/uwsgi
+    - ./lib/grappelli-safe:/srv/lib/grappelli-safe
+    - ./lib/mezzanine-agenda:/srv/lib/mezzanine-agenda
+    - ./lib/django-eve:/srv/lib/django-eve
+    - ./lib/django-prestashop:/srv/lib/django-prestashop
     # - ./lib/mezzanine/:/srv/lib/mezzanine
     # - ./lib/cartridge/:/srv/lib/cartridge
   volumes_from:
-    - data
+    - var
   expose:
     - "8000"
   links:
@@ -65,9 +63,9 @@ nginx:
   ports:
     - "8020:80"
   volumes:
-    - ./etc/nginx.conf:/etc/nginx/conf.d/default.conf
-    - ./data/var/log/nginx/:/var/log/nginx
+    - ./etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
+    - ./var/log/nginx/:/var/log/nginx
   volumes_from:
-    - data
+    - var
   links:
     - app
