Add doc to web server

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -14,9 +14,15 @@ server {
        location /media {
        	        alias /srv/media; # your Django project's media files - amend as required
        }
+
        # Django static
        location /static {
                alias /srv/static; # your Django project's static files - amend as required
+       }
+
+       # Django static
+       location /doc {
+               alias /srv/doc; # your Django project's static files - amend as required
        }
 
        location / {
