--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -22,7 +22,7 @@ server {
 
        # Django static
        location /doc {
-               alias /srv/doc; # your Django project's static files - amend as required
+               alias /srv/doc/build/html; # your Django project's static files - amend as required
        }
 
        location / {
