--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,7 +6,7 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = build
-DEPENDENCIES  = sphinx numpydoc
+DEPENDENCIES  = sphinx sphinx_rtd_theme
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
