--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-setuptools
-uwsgi
-watchdog
-mysqlclient
-psycopg2
-pyquery
-humanize
 Django==1.9.11
 mezzanine==4.2.2
+cartridge==0.12.0
+pyquery
+humanize
 django-modeltranslation==0.12
 django-meta==1.3.1
 django-bower==5.2.0
@@ -15,7 +11,6 @@ django-extensions==1.7.4
 django-countries==4.0
 django-querysetsequence==0.6.1
 django-autocomplete-light==3.2.1
-cartridge==0.12.0
 xlrd==1.0.0
 ipython
 gitpython
@@ -28,4 +23,7 @@ workalendar==1.0.0
 django-instagram==0.2.0a1
 django-extra-views==0.8.0
 bleach==1.5.0
+django-hijack==2.1.4
+django-hijack-admin==2.1.4
+django-compat==1.0.14
 -e .
