--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ xlwt==1.2.0
 DateTimeRange==0.2.8
 workalendar==1.0.0
 django-instagram==0.2.0a1
+-e git+https://github.com/marcopompili/django-instagram.git@master#egg=django-instagram
 django-extra-views==0.8.0
 bleach==1.5.0
 django-hijack==2.1.4
@@ -28,4 +29,5 @@ django-compat==1.0.14
 django-guardian==1.4.9
 pyldap
 django-auth-ldap==1.2.10
+lxml==4.2.0
 -e .
