Add semantic deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,6 @@ pyldap
 django-auth-ldap==1.2.10
 selenium==3.11.0
 lxml==4.2.0
+git+https://github.com/Ircam-Web/django-rdf-io@master#egg=django-rdf-io
+git+https://github.com/Ircam-Web/django-skosxl.git@master#egg=django-skosxl
 -e .
